--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "watch:sass": "node-sass scss/main.scss css/style.css -w",
-    "devserver": "live-server --browser=firefox",
+    "devserver": "live-server",
     "start": "npm-run-all --parallel devserver watch:sass"
   },
   "repository": {
